...
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="error_view_oops_message">Oops</string>
    <string name="error_view_retry_button_text">TRY AGAIN</string>
    <string name="error_view_error_text">There\'s an error loading the page</string>

    <string name="drawer_item_about">About</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_agents">Agents</string>

    <string name="warning_ssl_dialog_title">Warning</string>
...
